// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Icon add 1`] = `
.c0 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "default": "test-file-stub",
      },
    }
  }
  name="add"
  size="24px"
/>
`;

exports[`Storyshots Atoms/Icon arrow 1`] = `
.c0 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "default": "test-file-stub",
      },
    }
  }
  name="arrow"
  size="24px"
/>
`;

exports[`Storyshots Atoms/Icon care-receiver 1`] = `
.c0 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "default": "test-file-stub",
      },
    }
  }
  name="care-receiver"
  size="24px"
/>
`;

exports[`Storyshots Atoms/Icon care-receiver-info 1`] = `
.c0 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "default": "test-file-stub",
      },
    }
  }
  name="care-receiver-info"
  size="24px"
/>
`;

exports[`Storyshots Atoms/Icon care-receiver-info-detail 1`] = `
.c0 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "default": "test-file-stub",
      },
    }
  }
  name="care-receiver-info-detail"
  size="24px"
/>
`;

exports[`Storyshots Atoms/Icon exclamation 1`] = `
.c0 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": Object {
        "default": "test-file-stub",
      },
    }
  }
  name="care-receiver-info-detail"
  size="24px"
/>
`;
